<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HTWDresden</string>
    <string name="app_no_internet">Keine Internetverbindung!</string>
    <string name="app_internet_error">Fehler beim Laden!</string>
    <string name="app_slogan">Die App für Studenten der HTW Dresden</string>
    <string name="responsive_ui">HTWDresden</string>
    <string name="timetable">Stundenplan</string>
    <string name="next">Weiter</string>
    <string name="back">Zurück</string>
    <string name="search">Suche</string>
    <string name="close">Schließen</string>
    <string name="update">Aktualisieren</string>
    <string name="website">Webseite</string>
    <string name="note">Hinweis</string>
    <string name="noData">Fehlende Daten</string>
    <string name="startAssistent">Assistenten starten</string>
    <string name="pars_error">Fehler beim Parsen</string>
    <string name="error">Fehler!</string>


    <string name="management_semester">Wintersemester 2015</string>
    <string name="management_semester_length">Lehrveranstaltungen </string>
    <string name="management_semester_length1">05.10.15 – 30.01.16</string>
    <string name="management_semester_exam">Prüfungsabschnitt</string>
    <string name="management_semester_exam1">01.02.16 – 20.02.16</string>
    <string name="management_semester_free">Freie Tage</string>
    <string name="management_semester_free1">Reformationstag</string>
    <string name="management_semester_free2">31.10.15</string>
    <string name="management_semester_free3">Buß- und Bettag</string>
    <string name="management_semester_free4">18.11.15</string>
    <string name="management_semester_free5">Weihnachten</string>
    <string name="management_semester_free6">21.12.15 – 02.01.16</string>
    <string name="management_semester_free7">Pfingsten</string>
    <string name="management_semester_free8">25.05.15 – 26.05.15</string>
    <string name="management_semester_free9">dies academicus</string>
    <string name="management_semester_free10">03.06.15</string>

    <string name="about_contact">Kontakt</string>
    <string name="about_email">htwcampusapp@htw-dresden.de</string>
    <string name="about_link_website">https://htwdd.github.io</string>
    <string name="about_link_github">https://github.com/HTWDD/HTWDD</string>
    <string name="about_project">Projekt</string>
    <string name="about_developer">Entwickler</string>
    <string name="about_ws14">&#8805; WS14/15</string>
    <string name="about_ss14">SS14</string>
    <string name="about_initiator">Initiator</string>
    <string name="about_developer_ws14">Kay Förster</string>
    <string name="about_developer_ss14">Alexander Elchlepp, Kay Förster, Thomas Herrlich, Tamara Machowa</string>
    <string name="about_developer_initiator">Mark Schramm</string>


    <string name="library_title">Title:</string>
    <string name="library_author">Author:</string>
    <string name="library_medium">Medium:</string>
    <string name="library_availability">Verfügbarkeit:</string>
    <string name="library_location">Standort:</string>
    <string name="library_katalog">Katalog:</string>

    
    <string name="grade_sign_off">Abgemeldet</string>
    <string name="grade_ill">Krankgeschrieben</string>
    <string name="grade_not_allowed">Nicht zugelassen</string>

    <string name="exam_ExamType">Art</string>
    <string name="exam_StudyBranch">Richtung</string>
    <string name="exam_Date">Datum</string>
    <string name="exam_Time">Uhrzeit</string>
    <string name="exma_noExams">Keine Prüfungen gefunden</string>
    <string name="lesson_Room">Raum</string>

    <string name="mensa_more_information">mehr Informationen</string>

    <string name="timetable_updade_success">Stundenplan erfolgreich aktualisiert</string>
    <string name="timetable_updade_error">Stundenplan konnte nicht geladen werden!</string>
    <string name="timetable_noData">Für das Laden des Stundenplans müssen Jahrgang, Studiengang und Studiengruppe angebenen werden.\n\nSoll der Konfigurations-Assistent gestartet werden?</string>
    <string name="timetable_moreLessons">mehrere Stunden</string>
    <string name="timetable_moreLessonsPoints">***</string>
    <string name="timetable_only_KW">einige KW</string>
    <string name="timetable_DS_1">07:30\n-\n09:00</string>
    <string name="timetable_DS_2">09:20\n-\n10:50</string>
    <string name="timetable_DS_3">11:10\n-\n12:40</string>
    <string name="timetable_DS_4">13:20\n-\n14:50</string>
    <string name="timetable_DS_5">15:10\n-\n16:40</string>
    <string name="timetable_DS_6">17:00\n-\n18:30</string>
    <string name="timetable_DS_7">18:40\n-\n20:10</string>
    <string name="timetable_edit_lesson">Stunde bearbeiten</string>
    <string name="timetable_edit_label_time">Zeit</string>
    <string name="timetable_edit_LessonName">Vorlesung</string>
    <string name="timetable_edit_LessonNameHint">Name der Vorlesung</string>
    <string name="timetable_edit_LessonTag">Kurzform</string>
    <string name="timetable_edit_LessonTagHint">z.B. Ma</string>
    <string name="timetable_edit_LessonType">Art</string>
    <string name="timetable_edit_LessonRoomHint">z.B. S311</string>
    <string name="timetable_edit_LessonWeek">Woche</string>
    <string name="timetable_edit_LessonDay">Tag</string>
    <string name="timetable_edit_LessonDS">DS</string>
    <string name="timetable_edit_LessonWeeksOnly">nur KW</string>
    <string name="timetable_edit_LessonWeeksOnlyHint">z.B. 20;22;</string>
    <string name="timetable_edit_LessonSave">Speichern</string>
    <string name="timetable_edit_LessonSaveSuccess">Stunde erfolgreich gepeichert!</string>
    <string name="timetable_edit_LessonDelete">Löschen</string>
    <string name="timetable_edit_LessonDeleteSuccess">Stunde erfolgreich gelöscht!</string>
    <string name="timetable_edit_selecet">Bitte wähle eine Stunde aus:</string>
    <string name="timetable_details_newLesson">Neue Stunde hinzufügen</string>
    <string name="timetable_details_by">von</string>

    <string name="room_timetable_no_rooms">Füge Räume hinzu indem du auf das +-Symbol drückst.</string>
    <string name="room_timetable_add_room">Raum hinzufügen</string>
    <string name="room_timetable_add">Hinzufügen</string>
    <string name="room_timetable_add_room_message">Geb die Raumnummer mit Leerzeichen zwischen Gebäude und Zimmernummer ein \n(z.B. S 305)</string>
    <string name="room_timetable_updade_success">Raumplan erfolgreich aktualisiert</string>
    <string name="room_timetable_updade_error">Raumplan konnte nicht geladen werden!</string>
    <string name="room_timetable_updade_notFound">Raum konnte nicht gefunden werden / enthält keine Stunden!</string>
    <string name="room_timetable_delete">Löschen</string>
    <string name="room_timetable_note">Belegungsplan berücksichtigt keine Zusatzveranstaltungen oder Umlegungen. Raumreservierung bitte mit Frau Neumann (Z 228 A) absprechen.</string>


    
    <string name="overview_update_title">Eine neue Version ist verfügbar!</string>
    <string name="overview_update_message">Bitte Update auf die neuste Version.</string>
    <string name="overview_lessons_current">Aktuell</string>
    <string name="overview_lessons_next">Nächste</string>
    <string name="overview_lessons_noLesson">keine Veranstaltung</string>
    <string name="overview_lessons_remaining_start">in %1$s Minuten</string>
    <string name="overview_lessons_remaining_end">noch %1$s Minuten</string>
    <string name="overview_lessons_remaining_final">Ende seit %1$s Minuten</string>
    <string name="overview_tomorrow">morgen</string>
    <string name="overview_today">heute</string>
    <string name="overview_show_timetable">Stundenplan anzeigen</string>
    <string name="overview_show_grades">Noten anzeigen</string>
    <string name="overview_show_mensa">Mensa anzeigen</string>
    <string name="overview_show_config">Konfigurations-Assistent starten</string>


    <string name="widget_timetable_name">HTWDresden Stundenplan</string>

    <string name="title_activity_timetable_details">Stunden Details</string>
    <string name="title_activity_room_timetable_details">Belgungsplan</string>

    <string name="preference_title_stummschalten">Automatisches Stummschalten</string>
    <string name="preference_summary_stummschalten">Während einer Lehrveranstaltung wird dein Handy automatisch stumm geschaltet</string>

</resources>
