<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingBottom="8.0dip"
              android:paddingLeft="@dimen/sidemargin"
              android:paddingRight="@dimen/sidemargin"
              android:paddingTop="8.0dip">

    <LinearLayout
        style="@style/nowCardStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/examTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="80.0dip"
                android:text="@string/exam_ExamType"/>

            <TextView
                android:id="@+id/examTyp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="80.0dip"
                android:text="@string/exam_StudyBranch"/>

            <TextView
                android:id="@+id/examStudyBranch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="80.0dip"
                android:text="@string/exam_Date"/>

            <TextView
                android:id="@+id/examDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="80.0dip"
                android:text="@string/exam_Time"/>

            <TextView
                android:id="@+id/examTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="80.0dip"
                android:text="@string/exam_Room"/>

            <TextView
                android:id="@+id/examRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </LinearLayout>
</LinearLayout>